--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <h2>Implementare</h2>
-      <form action="tema.html" id="theform">
+      <form action="tema.html">
         <div class="label-input">
           <label for="name-box"> Nume </label>
           <input id="name-box" type="text" placeholder="Cum te cheamă" />
