--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,16 @@
                <input class="form-control" name="name" type="text" placeholder="Cum te cheama?"/>
             </div>
             <div>
-               <label class="form-label" for="email" >Email</label>
+               <label class="form-label"  >Email</label>
                <input class="form-control" name="email" type="email" placeholder="user@domain.ext"/>
             </div>
             <div>
-               <label class="form-label" for="message">Mesaj</label> 
+               <label class="form-label">Mesaj</label> 
                <textarea class="form-control" placeholder="Scrie-ne ceva" name="message">
                </textarea>
             </div>
             <div>
-               <label class="form-label" for="checkbox">
+               <label class="form-label">
                Mint ca citesc termenii si conditiile</label>
                <input class="" name="checkbox" type="checkbox"/>
             </div>
