--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,21 @@
   <main>
     <h2>Implementare</h2>
     <form>
-      <!-- Implementează formularul așa cum îl vezi în <aside> -->
+      <p>Nume</p>
+      <input type="text" value="" class="name" placeholder="Cum te cheama" required></input>
+      <p>Email</p>
+      <input type="email" value="" class="email"placeholder="user@domain.ext" required />
+      Mesaj
+      <textarea class="textarea" placeholder="Scrie-ne ceva" required></textarea>
+      <label for="checkbox" class="checkbox-group">
+        <input id="checkbox" type="checkbox" value="" required /> 
+        <p class ="termeni">Citesc mereu Termenii si Conditiile</p>
+
+      </label>
+      <div class="butoane">
+        <button type="reset" class="reset">Reseteaza Formular</button>
+        <button type="submit" class="submit">Trimite</button>
+      </div>
     </form>
   </main>
   <aside>
