--- a/src/index.html
+++ b/src/index.html
@@ -69,8 +69,8 @@
                 </p>
 
                 <p>
-                    <input type="checkbox" />
-                    Citesc mereu Termenii si Conditiile
+                    <input type="checkbox" id="terms"/>
+                    <label for="terms">Citesc mereu Termenii si Conditiile</label>
                 </p>
                 <div class="buttons">
                     <button class="resetb" type="button">
