--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,19 @@
 <body>
   <main>
     <h2>Implementare</h2>
-    <form>
-      <!-- Implementează formularul așa cum îl vezi în <aside> -->
-    </form>
+    <form class="form">
+      <p>Nume</p>
+      <input type="text" placeholder="Cum te cheamă"/>
+      <p>Email</p>
+      <input type="email" placeholder="user@domain.ext" />
+      <p>Mesaj</p>
+      <input type="textarea" placeholder="Scrie-ne ceva" />
+      <input type="checkbox"> Citesc mereu Termenii si Conditiile
+      <div>
+        <button type="button">Reseteaza Formular</button>
+      <button type="button">Trimite</button>
+      </div>
+  </form>
   </main>
   <aside>
     <h2>Model</h2>
