--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <textarea
       placeholder="Scrie-ne ceva" 
       rows = 4 ></textarea
-      <div class = "checbox">
+      <div class = "checkbox">
         <input type="checkbox" />
         <label for="">Citesc mereu Termenii și Condițiile</label>
       </div
