--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,11 @@
       <label for="message">Mesaj</label>
       <textarea
       placeholder="Scrie-ne ceva" 
-      rows = 4 ></textarea
-      <div class = "checkbox">
+      rows = 4 
+      ></textarea
+      <div class="checkbox-group">
         <input type="checkbox" />
-        <label for="">Citesc mereu Termenii și Condițiile</label>
+        <label for="termeni">Citesc mereu Termenii și Condițiile</label>
       </div
       <div class="btn-group">
         <button type="reset">Reseteaza Formular</button>
